please tell me why there is a gap on the right side when we go to the main tag

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-    <main class="">
+    <main>
+        <section class="container">
         <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Star_Wars_Yellow_Logo.svg" alt="sw logo">
 
-        <p class="episode">Episode: V</p>
+        <p class="desc">Episode: V</p>
 
         <h1>A new hope</h1>
 
@@ -38,6 +39,7 @@
             her people and restore
             freedom to the galaxy.....
         </p>
+    </section>
     </main>
 </body>
 
